# autonomous-review-loop

./: .gitignore  CLAUDE.md  README.md  README_PYPI.md  biome.json  pyproject.toml  renovate.json
.claude/: settings.json
.claude/skills/reviewloop/: SKILL.md
.claude/skills/reviewloop/scripts/: review-wait.sh
.github/workflows/: ci.yml  release.yml
.specify/memory/: constitution.md
scripts/bash/: review-comments.sh  review-wait.sh  reviewPrompt.txt
scripts/python/: __init__.py  reviewPrompt.txt  review_comments.py  review_wait.py
scripts/typescript/: review-comments.mjs  review-wait.mjs  reviewPrompt.txt
src/reviewloop_cli/: cli.py  init.py
src/reviewloop_cli/templates/scripts/: review-wait.sh
